Fixed a bug with the z-index in the machine creation form so that the header does not overlap the bug. The content of the site is entirely in English. The card has been improved, now it will have a default value, in the absence of text, in the database, in which case the description field will be absent.

--- a/src/components/screens/createCarForm/СreateCarForm.module.css
+++ b/src/components/screens/createCarForm/СreateCarForm.module.css
@@ -23,7 +23,7 @@
 	color: #db1212;
 	border-radius: 0.3125rem;
 	white-space: nowrap;
-	z-index: 6;
+	z-index: 101;
 	i {
 		margin-right: 0.3125rem;
 		font-size: 1.5625rem;
